wrapping text fix

--- a/src/scss/components/formula.scss
+++ b/src/scss/components/formula.scss
@@ -18,11 +18,12 @@
     font-style: italic;
     text-align: center;
     border-right: 1px solid $border-color;
-    width: $info-cell-width + 2;
+    min-width: $info-cell-width;
   }
 
   .input {
-    padding: 4px;
+    white-space: nowrap;
+    padding:  4px 0 4px 7px;
     font-size: 20px;
     outline: none;
     width: 100%;
